--- a/css/styles.css
+++ b/css/styles.css
@@ -41,9 +41,11 @@ img {
 .header {
   padding-top: 24px;
   padding-bottom: 24px;
+  border-bottom: 1px solid #e7e9fc;
 }
 .header-navigation {
   display: flex;
+  align-items: center;
 }
 .header-logo-link {
   font-family: "Raleway", sans-serif;
@@ -70,8 +72,8 @@ img {
 
 .header-navigation-list {
   display: flex;
-  padding-top: 24px;
-  padding-bottom: 24px;
+  padding: 24px 0;
+
   gap: 40px;
   margin-right: 332px;
 }
@@ -120,8 +122,7 @@ img {
 .section {
   background-color: #2e2f42;
   height: 600px;
-  padding-top: 188px;
-  padding-bottom: 292px;
+  padding: 188px 0;
 }
 .main-header {
   font-weight: 700;
@@ -146,8 +147,9 @@ img {
   border: none;
   border-radius: 4px;
   padding: 16px 32px;
-  display: flex;
+  display: block;
   margin: 0 auto;
+  min-width: 169px;
 }
 .main-button:hover,
 .main-button:focus {
@@ -175,7 +177,7 @@ img {
   gap: 24px;
 }
 .features-list-item {
-  width: calc((100% - 3 * 24) / 4);
+  width: calc((100% - 3 * 24px) / 4);
 }
 .features-title {
   font-weight: 500;
@@ -207,6 +209,9 @@ img {
   text-align: center;
   margin-bottom: 72px;
 }
+.name-position {
+  padding: 32px 0;
+}
 .team-list {
   display: flex;
   gap: 24px;
@@ -218,7 +223,6 @@ img {
   background-color: #fff;
 }
 .team-image {
-  margin-bottom: 32px;
 }
 
 .team-item-title {
@@ -236,7 +240,6 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
-  padding-bottom: 32px;
   text-align: center;
 }
 .portfolio {
@@ -262,9 +265,15 @@ img {
 .portfolio-list-item {
   background-color: #fff;
   width: calc((100% - 2 * 24) / 3);
+  border-radius: 0px 0px 4px 4px;
 }
 .portfolio-item-image {
   margin-bottom: 32px;
+}
+.app-name {
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
 }
 .portfolio-item-title {
   font-weight: 500;
@@ -273,7 +282,6 @@ img {
   letter-spacing: 0.02em;
   color: #2e2f42;
   margin-bottom: 8px;
-  padding-left: 16px;
 }
 .portfolio-item-description {
   font-weight: 400;
@@ -281,12 +289,11 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
-  margin-bottom: 32px;
-  padding-left: 16px;
 }
 .footer {
   background-color: #2e2f42;
   height: 312px;
+  padding: 100px 0;
 }
 .footer-text {
   font-weight: 400;
@@ -295,8 +302,6 @@ img {
   letter-spacing: 0.02em;
   color: #f4f4fd;
   max-width: 264px;
-
-  padding-bottom: 100px;
 }
 .footer-logo-link {
   font-family: "Raleway", sans-serif;
@@ -306,9 +311,8 @@ img {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
-  padding-top: 100px;
   margin-bottom: 16px;
-  display: block;
+  display: inline-block;
 }
 .footer-logo {
   font-family: "Raleway", sans-serif;
